[package]
name = "quadtree_img"
version = "0.3.0"
authors = ["vkcz"]
edition = "2018"
description = "A quadtree-based image compression system and reference implementation"
license = "AGPL-3.0-or-later"
keywords = ["image", "quadtree", "compression"]
categories = ["algorithms", "compression", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"

clap = "2.33.3"

image = "0.23.8"
